--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,15 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+URL: https://github.com/cemreyilmaz/tester
+BugReports: https://github.com/cemreyilmaz/tester/issues
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+Imports: 
+    dplyr, 
+    tidyr,
+    readr,
+    maps, 
+    graphics
