--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ URL: https://github.com/cemreyilmaz/tester
 BugReports: https://github.com/cemreyilmaz/tester/issues
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
 Imports: 
     dplyr, 
